--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,3 +7,18 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    .container.grid-md
+      hr
+      center
+        p
+          small
+            a(href="/") Home
+            span &nbsp;&middot;&nbsp;
+            a(href="/terms") Terms
+            span &nbsp;&middot;&nbsp;
+            a(href="/privacy") Privacy
+            span &nbsp;&middot;&nbsp;
+            a(href="https://goo.gl/forms/QIl0BYyu7FHQSufu2", target="new") Contact
+        p
+          em
+            small &copy; 2018 Citizen Capital, a 501c(3) Nonprofit
