--- a/views/index.pug
+++ b/views/index.pug
@@ -14,4 +14,4 @@ block content
           p Open-source adult literacy/ESL workbooks.
         .column.col-4.col-mx-auto
           h5 Emma on Atlantic
-          p Open-source adult literacy/ESL workbooks.
+          p Children’s STEM book, co-written by AI.
