--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,9 @@ block content
   .container.grid-md
     center
       h1 People first.
-      p Citizen Capital is a 501c(3) non-profit that incubates innovative technologies with the potential to promote greater transparency, direct participation, and accessibility in politics and education.
+      .columns
+        .column.col-6.col-mx-auto
+          p Citizen Capital is a 501c(3) non-profit that incubates innovative technologies with the potential to promote greater transparency, direct participation, and accessibility in politics and education.
     hr
     center
       h2 Releases
