--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,11 @@ html
     link(rel='stylesheet', href='/stylesheets/spectre.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    .container.grid-md
+      center
+        .columns
+          .column.col-6.col-mx-auto
+            img(src='/images/logo.svg')
     block content
     .container.grid-md
       hr
