--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
       h1 People first.
       .columns
         .column.col-6.col-mx-auto
-          p Citizen Capital is a 501c(3) non-profit that incubates innovative technologies with the potential to promote greater transparency, direct participation, and accessibility in politics and education.
+          p Citizen Capital is a 501(c)(3) non-profit that incubates innovative technologies with the potential to promote greater transparency, direct participation, and accessibility in politics and education.
     hr
     center
       h2 Releases
