--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,4 +26,4 @@ html
             a(href="https://goo.gl/forms/QIl0BYyu7FHQSufu2", target="new") Contact
         p
           em
-            small &copy; 2018 Citizen Capital, a 501c(3) Nonprofit
+            small &copy; 2018 Citizen Capital, a 501(c)(3) Nonprofit
