google site verification

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto')
     link(rel='stylesheet', href='/stylesheets/spectre.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(name='google-site-verification', content='UMrb6KWbap95vYXK-O_bR08H8L9mD6cYWoRt4T-SxXY')
   body
     .container.grid-md
       center
