--- a/views/index.pug
+++ b/views/index.pug
@@ -13,8 +13,9 @@ block content
       .columns
         .column.col-4.col-mx-auto
           p
-            em 5/1/2018
-          h5 Read/Write
+            img.img-responsive(src="/images/cover_2.jpeg")
+          h5
+            a(href="http://readwrite.school") Read/Write
           p Open-source adult literacy/ESL workbooks.
         .column.col-4.col-mx-auto
           p
