--- a/views/index.pug
+++ b/views/index.pug
@@ -19,6 +19,9 @@ block content
           p Open-source adult literacy/ESL workbooks.
         .column.col-3.col-mx-auto
           p
-            em 5/1/2018
+            img.img-responsive(src="/images/emma-cover.png")
           h5 Emma on Atlantic
           p Children’s STEM book, co-written by AI.
+          p
+            small
+              em Available 5/1/18
