--- a/views/index.pug
+++ b/views/index.pug
@@ -20,8 +20,6 @@ block content
         .column.col-3.col-mx-auto
           p
             img.img-responsive(src="/images/emma-cover.png")
-          h5 Emma on Atlantic
+          h5
+            a(href="http://emmaseries.shop") Emma on Atlantic
           p Children’s STEM book, co-written by AI.
-          p
-            small
-              em Available 5/1/18
